# BerkeOS

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  linker.ld  run.sh  snake.bex  x86_64-berkeos.json
.github/workflows/: ci.yml
berkebex/: Cargo.toml  README.md  hello.bex
berkebex/examples/: calculator.bepy  fizzbuzz.bepy  hello.bepy  snake.bepy
berkebex/src/: import.rs  main.rs
berkebex/src/builtins/: berkeos.rs  mod.rs
berkebex/src/codegen/: mod.rs
berkebex/src/gui_detector/: mod.rs  runtime.rs  static_detector.rs
berkebex/src/ir/: mod.rs  types.rs
berkebex/src/parser/: mod.rs  python.rs
berkebex/src/stdlib/: json.rs  mod.rs  re.rs
berkebex/tests/python/: test_01_hello.py  test_02_print_number.py  test_03_simple_add.py  test_04_arithmetic_priority.py  test_05_division.py  test_06_power.py  test_07_variables.py  test_08_string_var.py  test_09_booleans.py  test_10_operations.py  test_11_func_add.py  test_12_func_params.py  test_13_func_return.py  test_14_func_void.py  test_15_nested_calls.py  test_16_if.py  test_17_if_else.py  (+35 more)
src/: ahci.rs  allocator.rs  ata.rs  audio.rs  berkefs.rs  bexvm.rs  boot.rs  deno.rs  disk_io.rs  disk_paths.rs  editor.rs  font.rs  framebuffer.rs  idt.rs  image.rs  keyboard.rs  lib.rs  log.rs  main.rs  paging.rs  pcspeaker.rs  pic.rs  pit.rs  popup.rs  process.rs  rtc.rs  rtl8139.rs  scheduler.rs  serial.rs  shell.rs  syscall.rs  term.rs  vga.rs
src/boot/: boot.asm
src/kernel/: kernel.asm
src/net/: mod.rs
src/usb/: mod.rs  ohci.rs  storage.rs
test/: run_tests.sh
tools/: install_tui.sh  usb_install.sh
