[package]
name    = "berkeos"
version = "0.6.0"
edition = "2021"

[lib]
name       = "berkeos"
path       = "src/lib.rs"
crate-type = ["staticlib"]

[features]
disk_io = []

# Dummy bin with impossible feature — Cargo will never try to build it.
# This stops Cargo from auto-detecting src/main.rs as a binary target.
[[bin]]
name              = "berkeos_dummy"
path              = "src/main.rs"
required-features = ["__never__"]

[profile.dev]
panic = "abort"

[profile.release]
panic         = "abort"
opt-level     = 2
lto           = false
codegen-units = 1
